--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,21 @@
 spring.application.name=JWT-auth
+server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/auth
-spring.datasource.username=postgres
-spring.datasource.password=228488432
+# db JPA
+spring.datasource.url=${DATABASE_JDBC_URL}
 
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# ssl
+server.ssl.key-store=${KEYSTORE_PATH}
+server.ssl.key-store-password=${KEYSTORE_PASSWORD}
+server.ssl.key-store-type=${KEYSTORE_TYPE}
+server.ssl.key-alias=${KEYSTORE}
+
+# swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
